@@ -31,6 +31,7 @@
 	  android:layout_width="fill_parent"
 	  android:layout_height="wrap_content"
 	  android:textIsSelectable="true"
+	  android:typeface="monospace"
 	  style="@style/EntryItem"
 	/>
 </LinearLayout> 
