@@ -30,6 +30,7 @@
 	  android:id="@+id/value"
 	  android:layout_width="fill_parent"
 	  android:layout_height="wrap_content"
+	  android:typeface="monospace"
 	  style="@style/EntryItem"
 	/>
 </LinearLayout> 
