@@ -1,5 +1,6 @@
  * Add input types to entry fields
  * Show username in the title list for TAN entries
+ * Switch to monospace font for password fields
 
 KeePassDroid (1.9.17)
  * Updated Russian translations from I Nedoboy
